fix: validate overnight ready day